fixed urer, admin form alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -426,3 +426,7 @@ section#promise .section-heading {
   padding: 0;
 }
 
+
+.w-container {
+  max-width: 600px;
+}
